@@ -355,21 +355,6 @@ tasks:
         set -o errexit
         env SNAPPY="OFF" ZLIB="OFF" ZSTD="ON" .evergreen/scripts/compile.sh
   - func: upload-build
-- name: debug-compile-no-align
-  tags:
-  - debug-compile
-  commands:
-  - func: find-cmake-latest
-  - command: shell.exec
-    type: test
-    params:
-      working_dir: mongoc
-      add_expansions_to_env: true
-      shell: bash
-      script: |-
-        set -o errexit
-        env EXTRA_CONFIGURE_FLAGS="-DENABLE_EXTRA_ALIGNMENT=OFF" SNAPPY="OFF" ZLIB="BUNDLED" ZSTD="OFF" .evergreen/scripts/compile.sh
-  - func: upload-build
 - name: debug-compile-nosasl-nossl
   tags:
   - debug-compile
@@ -1311,7 +1296,7 @@ tasks:
       shell: bash
       script: |-
         set -o errexit
-        env SANITIZE=address SASL=AUTO SSL=OPENSSL EXTRA_CONFIGURE_FLAGS='-DENABLE_EXTRA_ALIGNMENT=OFF' .evergreen/scripts/compile.sh
+        env SANITIZE=address SASL=AUTO SSL=OPENSSL .evergreen/scripts/compile.sh
   - func: prepare-kerberos
   - func: run auth tests
     vars:
@@ -16373,7 +16358,6 @@ buildvariants:
   tasks:
   - release-compile
   - debug-compile-nosasl-nossl
-  - debug-compile-no-align
   - .debug-compile !.sspi .nossl .nosasl
   - .latest .nossl .nosasl
 - name: gcc82rhel
@@ -16417,7 +16401,6 @@ buildvariants:
   tasks:
   - release-compile
   - debug-compile-nosasl-nossl
-  - debug-compile-no-align
   - .latest .nossl .nosasl
 - name: gcc94
   display_name: GCC 9.4 (Ubuntu 20.04)
@@ -16429,7 +16412,6 @@ buildvariants:
   - debug-compile-nosrv
   - release-compile
   - debug-compile-nosasl-nossl
-  - debug-compile-no-align
   - debug-compile-sasl-openssl
   - debug-compile-nosasl-openssl
   - .authentication-tests .openssl
@@ -16449,7 +16431,6 @@ buildvariants:
   - .compression !.snappy
   - release-compile
   - debug-compile-nosasl-nossl
-  - debug-compile-no-align
   - debug-compile-nosrv
   - debug-compile-sasl-darwinssl
   - debug-compile-nosasl-nossl
@@ -16507,13 +16488,6 @@ buildvariants:
   tasks:
   - debug-compile-nosasl-nossl
   - .latest .nossl .nosasl .server
-- name: mingw
-  display_name: MinGW-W64
-  expansions:
-    CC: mingw
-  run_on: windows-vsCurrent-large
-  tasks:
-  - debug-compile-no-align
 - name: rhel8-power
   display_name: Power (ppc64le) (RHEL 8)
   expansions:
@@ -16534,7 +16508,6 @@ buildvariants:
   run_on: ubuntu2004-arm64-large
   tasks:
   - .compression !.snappy !.zstd
-  - debug-compile-no-align
   - release-compile
   - debug-compile-nosasl-nossl
   - debug-compile-nosasl-openssl
@@ -16550,7 +16523,6 @@ buildvariants:
   run_on: rhel8-zseries-large
   tasks:
   - release-compile
-  - debug-compile-no-align
   - debug-compile-nosasl-nossl
   - debug-compile-nosasl-openssl
   - debug-compile-sasl-openssl
