@@ -111,7 +111,6 @@ all_variants = [
         [
             "release-compile",
             "debug-compile-nosasl-nossl",
-            "debug-compile-no-align",
             ".debug-compile !.sspi .nossl .nosasl",
             ".latest .nossl .nosasl",
         ],
@@ -151,7 +150,7 @@ all_variants = [
         "gcc94-i686",
         "GCC 9.4 (i686) (Ubuntu 20.04)",
         "ubuntu2004-test",
-        ["release-compile", "debug-compile-nosasl-nossl", "debug-compile-no-align", ".latest .nossl .nosasl"],
+        ["release-compile", "debug-compile-nosasl-nossl", ".latest .nossl .nosasl"],
         {"CC": "gcc", "MARCH": "i686"},
     ),
     Variant(
@@ -163,7 +162,6 @@ all_variants = [
             "debug-compile-nosrv",
             "release-compile",
             "debug-compile-nosasl-nossl",
-            "debug-compile-no-align",
             "debug-compile-sasl-openssl",
             "debug-compile-nosasl-openssl",
             ".authentication-tests .openssl",
@@ -185,7 +183,6 @@ all_variants = [
             ".compression !.snappy",
             "release-compile",
             "debug-compile-nosasl-nossl",
-            "debug-compile-no-align",
             "debug-compile-nosrv",
             "debug-compile-sasl-darwinssl",
             "debug-compile-nosasl-nossl",
@@ -250,7 +247,6 @@ all_variants = [
         ["debug-compile-nosasl-nossl", ".latest .nossl .nosasl .server"],
         {"CC": "mingw"},
     ),
-    Variant("mingw", "MinGW-W64", "windows-vsCurrent-large", ["debug-compile-no-align"], {"CC": "mingw"}),
     Variant(
         "rhel8-power",
         "Power (ppc64le) (RHEL 8)",
@@ -272,7 +268,6 @@ all_variants = [
         "ubuntu2004-arm64-large",
         [
             ".compression !.snappy !.zstd",
-            "debug-compile-no-align",
             "release-compile",
             "debug-compile-nosasl-nossl",
             "debug-compile-nosasl-openssl",
@@ -291,7 +286,6 @@ all_variants = [
         [
             "release-compile",
             #      '.compression', --> TODO: waiting on ticket CDRIVER-3258
-            "debug-compile-no-align",
             "debug-compile-nosasl-nossl",
             "debug-compile-nosasl-openssl",
             "debug-compile-sasl-openssl",
